[package]
name = "chashmap"
version = "2.2.1"
authors = ["ticki <Ticki@users.noreply.github.com>"]
description = "Fast, concurrent hash maps with extensive API."
repository = "https://github.com/ticki/tfs"
documentation = "https://docs.rs/chashmap"
license = "MIT"
keywords = ["hashmap", "concurrent", "parking_lot", "lock", "map"]
exclude = ["target", "Cargo.lock"]

[dependencies]
parking_lot = { version = "0.5", features = ["deadlock_detection"] }
owning_ref = "0.3"
